--- a/kayela-portfolio/src/app.html
+++ b/kayela-portfolio/src/app.html
@@ -17,8 +17,8 @@
 			<div class="absolute inset-0" id="particles-js"></div>
 		</div>
 		<script>
-			partilesJS.load('particles-js', 'assets/particles.json', function() {
-				console.log('callback - particles.js config loaded')
+			partilesJS.load('particles-js', 'assets/particles-config.json', function() {
+				console.log('callback - particles-config.js config loaded')
 			});
 		</script>
 	</body>
