--- a/kayela-portfolio/src/app.html
+++ b/kayela-portfolio/src/app.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/cd5c1369a3.js" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -13,9 +16,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="wintry">
 		<div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
-		<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
-			<div class="absolute inset-0" id="particles-js"></div>
-		</div>
 		<script>
 			partilesJS.load('particles-js', 'assets/particles-config.json', function() {
 				console.log('callback - particles-config.js config loaded')
