--- a/kayela-portfolio/src/app.html
+++ b/kayela-portfolio/src/app.html
@@ -14,8 +14,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="wintry">
-		<div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" data-theme="wintry"  class="bg-slate-950 text-white relative">
+		<div style="display: contents" class="relative z-[1]">%sveltekit.body%
+		<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
+			<div class="absolute inset-0" id="particles-js"></div>
+		</div>
+		</div>
 		<script>
 			partilesJS.load('particles-js', 'assets/particles-config.json', function() {
 				console.log('callback - particles-config.js config loaded')
