--- a/kayela-portfolio/src/app.html
+++ b/kayela-portfolio/src/app.html
@@ -11,19 +11,21 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/cd5c1369a3.js" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A==" crossorigin="anonymous" referrerpolicy="no-referrer">
+
+		</script>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="wintry"  class="bg-slate-950 text-white relative">
-		<div style="display: contents" class="relative z-[1]">%sveltekit.body%
-		<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
+	<body data-sveltekit-preload-data="hover" data-theme="wintry">
+		<div style="display: contents" class="relative z-[1]" id="body-cont">%sveltekit.body%</div>
+
+		<div class="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70" id="particles-cont">
 			<div class="absolute inset-0" id="particles-js"></div>
 		</div>
-		</div>
 		<script>
-			partilesJS.load('particles-js', 'assets/particles-config.json', function() {
-				console.log('callback - particles-config.js config loaded')
-			});
+		particlesJS.load("particles-js", "assets/particlesjs-config.json", function () {
+			console.log("callback - particles.js config loaded");
+		});
 		</script>
 	</body>
 </html>
